k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: secret-checker
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  selector:
    app: secret-checker
  type: ClusterIP
